# swell-lobster

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  README.md  commitlint.config.js  dev.ps1  dev.qa.md  dev.sh  harness-engineering.md  package-lock.json  package.json  pyproject.toml  remark.md
.claude/: settings.local.json
.claude/rules/: project_rules.md
.cursor/rules/: git-commit-message.mdc
.github/workflows/: verify.yml
.husky/: pre-push
.playwright-mcp/: page-2026-04-11T14-41-16-368Z.yml  page-2026-04-11T14-48-53-878Z.yml  page-2026-04-11T14-51-36-860Z.yml  page-2026-04-11T14-52-02-832Z.yml
SKILLS/: AGENTS.md
SKILLS/docx/: SKILL.md
SKILLS/emoji-expression/: SKILL.md
SKILLS/pdf/: SKILL.md
SKILLS/playwright/: SKILL.md
SKILLS/playwright-cli/: SKILL.md
SKILLS/pptx/: SKILL.md
SKILLS/skill-creator/: SKILL.md
SKILLS/translato-zh2en/: SKILL.md
SKILLS/weather/: SKILL.md
SKILLS/web-search/: SKILL.md  package-lock.json
SKILLS/xlsx/: SKILL.md
apps/: AGENTS.md
apps/desktop/: AGENTS.md  package.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web-ui/: AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
assets/: AGENTS.md
docs/: AGENTS.md  PROJECT_STATUS.md  delivery-workflow.md  desktop-env-config.md  desktop-user-guide.md  desktop-validation-checklist.md  development.md  openakita-style-feature-plan.md  prompt_structure.md  roadmap.md  runtime-guide.md  shanghai_weekend_weather.docx  task-templates.md
identify/: CREDITS.md
identity/: AGENT.example  AGENTS.md  CREDITS.md  SOUL.example  SOUL.example.md
learning-docs/: AGENTS.md  BUILD_SIMILAR_AGENT_BACKEND.md  LEARNING_ROADMAP.md  PYTHON_PROJECT_INIT_AND_ROADMAP.md  node_后端可行性与_0_到_1_自建指南.plan.md  openakita_式功能与菜单规划_9d68b7be.plan.md  python_项目初始化与分批规划_77d61b38.plan.md  项目学习路线文档.plan.md
registries/: AGENTS.md  providers.json
scripts/: AGENTS.md  check-consistency.mjs  git-hook-verify.mjs  lint-staged-web-ui.mjs  verify.mjs
src/: AGENTS.md
(+394 files in other folders)
