[project]
name = "swell-lobster"
version = "0.1.0"
description = "Swell-Lobster Python 子项目 - 参考 XimaLobster 多功能架构"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Swell-Lobster" }
]
keywords = ["ai", "agent", "assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]
api = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]
llm = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
]

[project.scripts]
swell-lobster = "swell_lobster.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swell_lobster"]

[tool.hatch.build.targets.sdist]
include = ["src/swell_lobster", "identity", "pyproject.toml", "README.md"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
