[package]
name = "swell-lobster-desktop"
version = "0.1.0"
description = "SwellLobster Desktop App"
authors = ["swell"]
edition = "2021"

[lib]
name = "swell_lobster_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "swell-lobster-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
open = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
